fix: use lighter background for dark mode tooltips

--- a/css/themes.css
+++ b/css/themes.css
@@ -7,6 +7,18 @@
     transform: translateX(-25%) !important;
 }
 
+#themedropdown a {
+    color: #2196f3;
+    transition: all 0.3s ease;
+}
+
+#themedropdown a:hover {
+    color: #1e88e5;
+    background-color: transparent;
+    transition: all 0.3s ease;
+}
+
+/* Dark Mode Theme Dropdown */
 .dark #themedropdown {
     background-color: transparent !important;
 }
@@ -17,17 +29,6 @@
 
 .dark #themedropdown li a {
     background-color: transparent !important;
-}
-
-#themedropdown a {
-    color: #2196f3;
-    transition: all 0.3s ease;
-}
-
-#themedropdown a:hover {
-    color: #1e88e5;
-    background-color: transparent;
-    transition: all 0.3s ease;
 }
 
 /* Dark Mode */
@@ -44,9 +45,9 @@
     background-color: #01143b !important;
 }
 
-.dark #floatingWindows>.windowFrame {
-  border: 2px solid var(--border);
-  background-color: var(--bg);
+.dark #floatingWindows > .windowFrame {
+    border: 2px solid var(--border);
+    background-color: var(--bg);
 }
 
 .dark .wfbtItem {
@@ -57,9 +58,9 @@
     color: #e8e8e8;
 }
 
-.dark #floatingWindows>.windowFrame>.wfWinBody .wfbWidget {
-  color: #ccc !important;
-  background-color: #3f3f44 !important;
+.dark #floatingWindows > .windowFrame > .wfWinBody .wfbWidget {
+    color: #ccc !important;
+    background-color: #3f3f44 !important;
 }
 
 .dark .popupMsg {
@@ -72,7 +73,7 @@
 }
 
 .dark #loading-image-container {
-  background-color: var(--bg) !important;
+    background-color: var(--bg) !important;
 }
 
 .dark #loadingText {
@@ -84,8 +85,8 @@
 }
 
 .modal-content {
-  background-color: var(--panel-bg);
-  color: var(--fg);
+    background-color: var(--panel-bg);
+    color: var(--fg);
 }
 
 .dark #submitLilypond {
@@ -95,8 +96,8 @@
 .dark #search,
 .dark #helpfulSearch,
 .dark .ui-autocomplete {
-  background-color: #1c1c1c !important;
-  color: #fff !important;
+    background-color: #1c1c1c !important;
+    color: #fff !important;
 }
 
 .dark .ui-autocomplete li:hover {
@@ -156,19 +157,19 @@
 }
 
 body {
-  --border: #cccccc;
-  --bg: #ffffff;
-  --fg: #666666;
-  --panel-bg: #f5f5f5;
-  --accent: #2196F3;
+    --border: #cccccc;
+    --bg: #ffffff;
+    --fg: #666666;
+    --panel-bg: #f5f5f5;
+    --accent: #2196f3;
 }
 
 body.dark {
-  --border: #000000;
-  --bg: #1d1d20;
-  --fg: #e8e8e8;
-  --panel-bg: #1c1c1c;
-  --accent: #3fe0d1;
+    --border: #000000;
+    --bg: #1d1d20;
+    --fg: #e8e8e8;
+    --panel-bg: #1c1c1c;
+    --accent: #3fe0d1;
 }
 
 /* Your Custom Theme can go here if you don't want to modify the existing dark mode */
